Årsmöte 2026 info update!
+ lade till protokoll
+ lade till nya stadgarna
- tog bort info om musikhjälpen och gamejam från första sidan
- tog bort info om gamejam, hålla låda, och fredagsevent från kalendern

--- a/src/pages/calender.astro
+++ b/src/pages/calender.astro
@@ -16,18 +16,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <h1 class="head">Kalendern</h1>
             <div class="calenders">
                 <div class="calendar">
-                    <h3>GameJam - Tävla i spelskapande!</h3>
-                    <p><b>NÄR: </b>Höstlovet (v.44) 2025</p>
-                    <p><b>VAR:</b> SGC:s discordserver</p>
-                    <p><b>HUR:</b> Vi släpper ett tema i början av veckan, skicka in ett bidrag innan tiden är slut för att delta.</p>
-                    <p>GameJam är en tävling i spelskapande där man ska, själv eller i lag, skapa en interaktiv upplevelse under en vecka. Skapa ett datorspel, rollspel, en custom map eller någon annan form av interaktiv upplevelse som följer temat. Vinnande laget får presentkort värda tillsammans 500kr. <a href="/gamejam">Mer info!</a></p>
-                </div>
-                <div class="calendar">
                     <h3>VIP-event på fredagar och söndagar!</h3>
-                    <p><b>NÄR: </b>Fredagar 19:00 & Söndagar 19:00</p>
+                    <p><b>NÄR: </b>Söndagar 19:00</p>
                     <p><b>VAR:</b> Röstsamtal i  “Föreningshörnan” på SGC:s discord.</p>
                     <p><b>HUR:</b> Ledarledd spelkväll med spel som är lätta att förstå.</p>
-                    <p>Ni som är föreningsmedlemmar kan vara med på två events varje vecka. Dessa hålls i vår Discord på fredagar och söndagar 19:00! Vi brukar spela lite olika spel såsom Skribbl.io, Make it Meme, Gartic Phone, Minecraft-minigames på våra egna servrar, och så vidare.</p>
+                    <p>Ni som är föreningsmedlemmar kan vara med på events varje vecka. Dessa hålls i vår Discord på söndagar 19:00! Vi brukar spela lite olika spel såsom Skribbl.io, Make it Meme, Gartic Phone, Minecraft-minigames på våra egna servrar, och så vidare.</p>
                 </div>
                 <div class="calendar">
                     <h3>Lyft dina åsikter på Öppet möte</h3>
@@ -50,11 +43,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     <p><b>NärCon i Linköping</b> är en nördkulturfestival där vi brukar ha ett rum. Vi brukar delta på både deras Vinter- och Sommar-konvent. Inträde till NärCon kostar. Du är alltid välkommen till vårt rum - speciellt på våra event såsom King of the Castle, Werewolf, Parlamentet mm! Du kan se alla våra event i NärCon-appens schema. </p>
                     <p><b>Glitched LAN</b>  är ett LAN och spelfestival i Jönköping som vi i år för första gången deltog på som förening. </p>
                     <p><b>Spelkvällar nära dig</b> är något vi vill börja med, men inte kommit igång med ännu. Planen är att ha små fysiska spelkvällar runt om i landet.</p>
-                </div>
-                <div class="calendar">
-                    <h3>Podcasten Hålla Låda med SGC</h3>
-                    <p>Varannan onsdag släpper vi ett avsnitt av vår egen podcast Hålla Låda med SGC! Arre och Tilda håller låda om stort och smått, ofta med en gästande snubbe i lådan. Mycket skoj och go stämning, välkommen in i värmen!</p>
-                    Podcasten finns tillgänglig på <a href="https://open.spotify.com/show/47ENGL3lMHKu9LDUDXT0fh">Spotify</a> och <a href="https://www.youtube.com/@onlineforeningensgc/podcasts">Youtube</a>
                 </div>
             </div>
 		</main>
