--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,29 +42,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				Senaste nytt!
 			</h2>
 			<p>
-				<h3>GameJam - Höstlovet 2025</h3>
-				<a href="/gamejam"><img src="/GameJam.png" alt="GameJam 2025s logotyp" class="logo"/></a>
-				Tävla i spelskapande! Skapa en interaktiv upplevelse, själv eller i lag, och vinn presentkort värt 500kr! Tävlingen hålls helt online och kommer pågå under hela höstlovet (v.44). Hoppas du vill vara med! <a href="/gamejam">Mer info!</a>
+				<h3>Ny styrelse!</h3>
+				Årsmötet har valt en ny styrelse! Henkan sitter kvar som ordförande ett år till. Hornet och Mars sitter också kvar som ledamöter. Nya till styrelsen är Ploffsen, Knas, och Blob!
 			</p>
-			<p>
-				<h3>Musikhjälpen 2025</h3>
-				Den 1-7 december sker Musikhjälpen 2025 i Karlstad. Onlineföreningen SGC samlar åter igen in pengar till Musikhjälpen! 
-				2024 samlade vi in 11.000kr, och nu är det dags igen! Pytsa för att få oss att göra utmaningar för er underhållning, 
-				eller för att låsa upp någon gåva på vår discord. <br><a href="https://musikhjalpen.sgc.se">Klicka här för att komma till bössan!</a>
-			</p>
-			<div class="donation-progress">
-                <h3>Musikhjälpen - Insamlingsmål</h3>
-                <div class="progress-info">
-                    <span id="current-amount">Laddar...</span>
-                    <span id="goal-amount">Mål: 15.000kr</span>
-                </div>
-                <div class="progress-bar-container">
-                    <div class="progress-bar" id="progress-bar">
-                        <div class="progress-fill" id="progress-fill"></div>
-                    </div>
-                    <div class="progress-percentage" id="progress-percentage">0%</div>
-                </div>
-            </div>
 		</main>
 		<Footer />
 		<script type="module">
