--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</h2>
 			<p>
 				<h3>Ny styrelse!</h3>
-				Årsmötet har valt en ny styrelse! Henkan sitter kvar som ordförande ett år till. Hornet och Mars sitter också kvar som ledamöter. Nya till styrelsen är Ploffsen, Knas, och Blob!
+				Årsmötet har valt en ny styrelse! Henkan sitter kvar som ordförande ett år till. Hornet och Mars sitter också kvar som ledamöter. Nya till styrelsen är Ploffsen, Knas, Mordecai, och Blob!
 			</p>
 		</main>
 		<Footer />
